2003-08-05  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-entity-decl.c, cong-editor-area-entity-decl.h, cong-editor-area-text-comment.c, cong-editor-area-text-comment.h, cong-editor-node-comment.c, cong-editor-node-comment.h, cong-editor-node-dtd.c, cong-editor-node-dtd.h, cong-editor-node-entity-decl.c, cong-editor-node-entity-decl.h, Makefile.am

	Initial support for comments and entities in the new editor widget

2003-08-04  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-text-fragment.c, cong-editor-area-text-fragment.h, cong-editor-node-text.c, cong-editor-node-text.h, cong-editor-widget3.c

	Rendering of the cursor
	
	* cong-editor-node-text.c, cong-text-cache.c, cong-text-cache.h

	Rendering of the selection
	
	* cong-editor-area-text-fragment.c, cong-editor-area-text-fragment.h

	Text fragments are now implemented directly in terms of PangoLayoutLines

	* cong-editor-area-line.c, cong-editor-area-span-tag.c

	Suppressed some of the debug output

2003-08-02  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-flow-holder-inlines.c, cong-editor-node-text.c, cong-editor-node.c, cong-editor-node.h

	Text update for the new inline blocks fixed a bug with losing initial text fragments when updating an inline.
	
	* cong-file-new.c, cong-plugin.c, plugin-tests.c

	Disabled lots of stray debug messages
	
	* cong-editor-area-text-fragment.c, cong-editor-area-text-fragment.h, cong-editor-area-text.c, cong-editor-area-text.h, cong-editor-node-text.c

	Click and drag support for the new inline blocks

2003-08-01  David Malcolm <david@davemalcolm.demon.co.uk>
